name:                cool 
version:             0.1.0.0
synopsis:            Haskell implementation of COOL compiler 
description:         Implement a COOL compiler with Haskell and LLVM
homepage:            https://github.com/JenniferWang/cool
license:             MIT
license-file:        LICENSE-MIT
author:              Jiyue Wang
maintainer:          jennifer.w0930@gmail.com
copyright:           2016 Jiyue Wang
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:         https://github.com/JenniferWang/cool/issues


Source-Repository head
  Type: git
  Location: git@github.com:JenniferWang/cool.git

executable coolc
  default-language:       Haskell2010
  main-is:                Main.hs
  build-depends:
      base                >= 4.6
    , haskeline           >= 0.7.1.2
    , llvm-general        >= 3.5.1.1
    , llvm-general-pure   >= 3.5.0.0
    , parsec              >= 3.1
    , mtl                 >= 2.1.3
    , transformers        >= 0.3.0.0 && < 0.5
    , containers          >= 0.4
  ghc-options:            -Wall -O2
  hs-source-dirs:         src

library
  default-language:        Haskell2010
  ghc-options:             -Wall -O2
  build-depends:
      base                 >= 4.6
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.1.1
    , llvm-general-pure    >= 3.5.0.0
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
